# wrybrowser

./: Cargo.toml  LICENSE  README.md
src/: agent.rs  lib.rs  main.rs
tests/: browser.rs
