[package]
name = "wrybrowser"
version = "0.1.0"
edition = "2021"

[features]
default = ["headless"]
browser = ["wry", "winit", "tao"]
headless = []

[dependencies]
wry = { version = "0.47", optional = true, default-features = false, features = ["linux-body"] }
winit = { version = "0.30", optional = true, default-features = false, features = ["rwh_06", "x11"] }
tao = { version = "0.27", optional = true }

[[bin]]
name = "wrybrowser"
required-features = ["browser"]
